core/unpackaged/main/default/objects/Knowledge__kav/fields/Affected_Area__c.field-meta.xml
<CustomField>
    <fullName>Affected_Area__c</fullName>
    <inlineHelpText>Select the affected area</inlineHelpText>
    <label>Affected Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Portal / User Interface</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Invoicing</fullName>
            </value>
            <value>
                <fullName>Account / Access</fullName>
            </value>
            <value>
                <fullName>ERP Integration</fullName>
            </value>
            <value>
                <fullName>Cart</fullName>
            </value>
            <value>
                <fullName>Checkout</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>