core/unpackaged/main/default/objects/Knowledge__kav/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <inlineHelpText>Explain the known or most likely root cause(s).</inlineHelpText>
    <label>Cause</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>