core/unpackaged/main/default/objects/Knowledge__kav/fields/Expected_Result__c.field-meta.xml
<CustomField>
    <fullName>Expected_Result__c</fullName>
    <description>Displays the expected result of the knowledge article</description>
    <inlineHelpText>Describe what success looks like after completing the steps.</inlineHelpText>
    <label>Expected Result</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>