core/unpackaged/main/default/objects/Knowledge__kav/fields/Overview__c.field-meta.xml
<CustomField>
    <fullName>Overview__c</fullName>
    <description>Explains what this procedure does and when it should be used.</description>
    <inlineHelpText>Briefly explain what this procedure does and when it should be used.</inlineHelpText>
    <label>Overview</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>