core/unpackaged/main/default/objects/Knowledge__kav/fields/Prerequisites__c.field-meta.xml
<CustomField>
    <fullName>Prerequisites__c</fullName>
    <description>Explains any prerequisites for a knowledge article</description>
    <inlineHelpText>List required access, information, tools, or conditions before starting</inlineHelpText>
    <label>Prerequisites</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>