core/unpackaged/main/default/objects/Knowledge__kav/fields/Steps__c.field-meta.xml
<CustomField>
    <fullName>Steps__c</fullName>
    <description>Explains the step by step instrucitons</description>
    <inlineHelpText>Provide clear, numbered, step-by-step instructions</inlineHelpText>
    <label>Steps</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>