core/unpackaged/main/default/objects/Knowledge__kav/fields/Symptoms__c.field-meta.xml
<CustomField>
    <fullName>Symptoms__c</fullName>
    <description>Contains the symptoms of a troubleshooting article</description>
    <inlineHelpText>Describe the issues as observed (errors, behavior, screenshots if applicable</inlineHelpText>
    <label>Symptoms</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>