core/unpackaged/main/default/objects/Knowledge__kav/fields/Workaround__c.field-meta.xml
<CustomField>
    <fullName>Workaround__c</fullName>
    <inlineHelpText>Temporary mitigation if the full resolution cannot be applied.</inlineHelpText>
    <label>Workaround</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>