core/unpackaged/main/default/objects/Knowledge__kav/recordTypes/How_To.recordType-meta.xml
<RecordType>
    <fullName>How_To</fullName>
    <active>true</active>
    <description>Internal procedural and step-by-step instructions</description>
    <label>How-To</label>
</RecordType>